fixed video width ratio and removed additional info div

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <div class="row">
 <div class="column"> 
 		<div class="content">
-		<center><iframe width="210" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		<center><iframe width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 		<center><h3> Makey Makey Walkthrough</h3></center>
 		<p></p>
 		</div>
@@ -26,17 +26,17 @@
 
 <div class="column">
 		<div class="content">
-		<center><iframe width="210" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		<center><iframe width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 		<center><h3> Canva Tutorial</h3></center>
 		<p></p>
 		</div>
 	</div>
 	
 </div> <!--row div ending-->
-<div class="content">
+<!--div class="content">
   <h3>Additional Info</h3>
 	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
-</div>
+</div>-->
 
 </body>
 </html>
