added github account and removed linkedin profile

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
 	</div>
 	
 </div> <!--row div ending-->
-<!--div class="content">
+<div class="content">
   <h3>Additional Info</h3>
-	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
-</div>-->
+	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
+</div>
 
 </body>
 </html>
