--- a/website.html
+++ b/website.html
@@ -52,6 +52,7 @@
 <div class="content">
   <h3>Additional Info</h3>
 	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
+	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div>
 
 </div>
