added mail to option connected to albany.edu email

--- a/website.html
+++ b/website.html
@@ -12,8 +12,8 @@
 <h1><center>Chyna Grant-Williams</center></h1>
 <hr>
 
-<span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
-
+<span class="left">Brooklyn, NY 11221</span>​
+<span class="right">850-459-4283</span>
 
 <div class="row">
 	<div class="column">
@@ -51,6 +51,7 @@
 
 <div class="content">
   <h3>Additional Info</h3>
+	<a class= "link" href="mailto:cgrant-williams@albany.edu">cgrant-williams@albany.edu</a>
 	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div>
