--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <div class="row">
 <div class="column"> 
 		<div class="content">
-		<center><iframe width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
 		<center><h5> Makey Makey Walkthrough</h5></center>
 		<p></p>
 		</div>
@@ -26,7 +26,7 @@
 
 <div class="column">
 		<div class="content">
-		<center><iframe width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
 		<center><h5> Canva Tutorial</h5></center>
 		<p></p>
 		</div>
