responsive resizing of name title

--- a/website.html
+++ b/website.html
@@ -9,7 +9,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center>Chyna Grant-Williams</center></h1>
+<h1><center><a class="home" style="font-size:5vw;">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
