responsive resizing of name title

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" style="font-size:5vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
