update info link

--- a/website.html
+++ b/website.html
@@ -14,6 +14,7 @@
 
 <span class="left">Brooklyn, NY 11221</span>​
 <span class="right">850-459-4283</span>
+<hr>
 
 <div class="row">
 	<div class="column">
@@ -52,8 +53,10 @@
 <div class="content">
   <h3>Additional Info</h3>
 	<a class= "link" href="mailto:cgrant-williams@albany.edu">cgrant-williams@albany.edu</a>
-	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
+	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
+    <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
+
 </div>
 
 </div>
