--- a/aboutme.html
+++ b/aboutme.html
@@ -14,20 +14,23 @@
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
+<hr>
 
 <div class="row">
 <div class="column"> <!--conent-->
 		<div class="content">
 		<center><img src="testing.jpg" alt="me" style="width:40%"></center>
-		<center><h3>About Me</h3></center>
-		<p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-		<p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p></div>
+		<center><h3>Hello!</h3></center>
+		<p class ="b"> I'm a recent graduate of Univeristy at Albany's class of 2020. Focusing on starting a career as a front-end web developer specializing in user-experience design (IUX/UX). On this website I hope to showcase not only my web developing skills but also finished projects I have completed in my undergrad studies and free time. Killing two birds with one code, I hope to strengthen my skills in HTML, CSS, Javascript, and Python through online courses and challenges and sharing them here. You can keep up with my progress by accessing my github account, linkedin profile, as well as my twitter. Enjoy!</p>
 	</div>
+</div>
 </div>
 
 <div class="content">
   <h3>Additional Info</h3>
-	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>Linkedin Profile</p></a>
+	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
+	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
+	<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
 </body>
