--- a/portfolio.html
+++ b/portfolio.html
@@ -17,25 +17,31 @@
 <hr>
 
 <div class="row">
-<div class="column"> 
+	<div class="column"> 
 		<div class="content">
-		<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
-		<center><h5> Makey Makey Walkthrough</h5></center>
-		<p></p>
+			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
+			<center><h5> Makey Makey Walkthrough</h5></center>
+			<p></p>
 		</div>
 	</div>
 
-<div class="column">
+	<div class="column">
 		<div class="content">
-		<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
-		<center><h5> Canva Tutorial</h5></center>
-		<p></p>
+			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
+			<center><h5> Canva Tutorial</h5></center>
+			<p></p>
 		</div>
 	</div>
+
+	<div class="column">
+		<div class="content">
 	
+		</div>
+	</div>
 </div> <!--row div ending-->
+
 <div class="content">
-  <h3>Additional Info</h3>
+	<h3>Additional Info</h3>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div>
 
