--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 	<div class="column"> 
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
-			<center><h5> Makey Makey Walkthrough</h5></center>
+			<center><h5>Makey Makey Walkthrough</h5></center>
 			<p></p>
 		</div>
 	</div>
@@ -28,14 +28,15 @@
 	<div class="column">
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
-			<center><h5> Canva Tutorial</h5></center>
+			<center><h5>Canva Tutorial</h5></center>
 			<p></p>
 		</div>
 	</div>
 
 	<div class="column">
 		<div class="content">
-	
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class= "mps" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
 		</div>
 	</div>
 </div> <!--row div ending-->
