logistics of css and html for mockup page

--- a/mockups.html
+++ b/mockups.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="website.css">
+<link rel="stylesheet" type="text/css" href="mockups.css">
 </head>
 <body>
 
@@ -19,27 +19,26 @@
 <div class="row">
 	<div class="column">
 		<div class="content"> 
+			<img src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%">
 			<p></p>
 		</div>
 	</div>
   
 	<div class="column">
 		<div class="content">
+			<img src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%">
 			<p></p>
 		</div>
 	</div>  
 	
 	<div class="column">
 		<div class="content">
+			<img src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%">	
 			<p></p>
 		</div>
 	</div>  
 	
-	<div class="column"> 
-		<div class="content">
-			<p></p>
-		</div>
-	</div>
+
 </div>
 
 <div class="content">
