--- a/mockups.html
+++ b/mockups.html
@@ -9,7 +9,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center><a class="title" style="font-size:6vw;">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" style="font-size:6vw;">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
@@ -19,21 +19,21 @@
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<img src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%">
+			<img src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
 			<p></p>
 		</div>
 	</div>
   
 	<div class="column">
 		<div class="content">
-			<img src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%">
+			<img src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%"></a>
 			<p></p>
 		</div>
 	</div>  
 	
 	<div class="column">
 		<div class="content">
-			<img src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%">	
+			<img src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%"></a>
 			<p></p>
 		</div>
 	</div>  
