--- a/mockups.html
+++ b/mockups.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="mockups.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="mockups.css">
 </head>
@@ -37,9 +38,19 @@
 			<p></p>
 		</div>
 	</div>  
-	
+<div id="myModal" class="modal">
 
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>	
 </div>
+
+</div> <!--row-->
 
 <div class="content">
 	<h3>Additional Info</h3>
