--- a/mockups.html
+++ b/mockups.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="mockups.js"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="mockups.css">
 </head>
@@ -20,7 +20,7 @@
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<img src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
+			<img id="myImg" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
 			<p></p>
 		</div>
 	</div>
@@ -38,16 +38,16 @@
 			<p></p>
 		</div>
 	</div>  
+	
 <div id="myModal" class="modal">
-
-  <!-- The Close Button -->
-  <span class="close">&times;</span>
-
-  <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
-
-  <!-- Modal Caption (Image Text) -->
-  <div id="caption"></div>	
+	<!-- The Close Button -->
+	<span class="close">&times;</span>
+	
+	<!-- Modal Content (The Image) -->
+	<img class="modal-content" id="img01">
+	
+	<!-- Modal Caption (Image Text) 
+	<div id="caption"></div>	-->
 </div>
 
 </div> <!--row-->
@@ -59,6 +59,8 @@
 		<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 		<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
+
+<script src="mockups.js"></script>
 
 </body>
 </html>
