--- a/mockups.html
+++ b/mockups.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="mockups.css">
 </head>
+
 <body>
 
 <!-- MAIN (Center website) -->
@@ -18,36 +19,49 @@
 <hr>
 
 <div class="row">
-	<div class="column">
+<div class="column">
 		<div class="content"> 
-			<img id="myImg" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
+			<img id="flix" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
 			<p></p>
 		</div>
 	</div>
-  
-	<div class="column">
-		<div class="content">
-			<img src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%"></a>
-			<p></p>
-		</div>
-	</div>  
 	
-	<div class="column">
-		<div class="content">
-			<img src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%"></a>
-			<p></p>
-		</div>
-	</div>  
-	
-<div id="myModal" class="modal">
+<div id="myModal1" class="modal">
 	<!-- The Close Button -->
-	<span class="close">&times;</span>
+	<span class="close1">&times;</span>
 	
 	<!-- Modal Content (The Image) -->
 	<img class="modal-content" id="img01">
+</div>
+
+	<div class="column">
+		<div class="content">
+			<img id="fum" src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%"></a>
+			<p></p>
+		</div>
+	</div> 
 	
-	<!-- Modal Caption (Image Text) 
-	<div id="caption"></div>	-->
+<div id="myModal2" class="modal">
+	<!-- The Close Button -->
+	<span class="close2">&times;</span>
+	
+	<!-- Modal Content (The Image) -->
+	<img class="modal-content" id="img02">
+</div>	
+	
+	<div class="column">
+		<div class="content">
+			<img id="hare" src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%"></a>
+			<p></p>
+		</div>
+	</div>  
+	
+<div id="myModal3" class="modal">
+	<!-- The Close Button -->
+	<span class="close3">&times;</span>
+	
+	<!-- Modal Content (The Image) -->
+	<img class="modal-content" id="img03">
 </div>
 
 </div> <!--row-->
