got the content to enlargen and close

--- a/mockups.html
+++ b/mockups.html
@@ -19,28 +19,32 @@
 <hr>
 
 <div class="row">
-<div class="column">
+
+<!--FLIX CONTENT-->
+	<div class="column">
 		<div class="content"> 
-			<img id="flix" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%"></a>
+			<img id="flix" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%">
 			<p></p>
 		</div>
 	</div>
-	
+<!--FLIX ENLARGEN-->	
 <div id="myModal1" class="modal">
 	<!-- The Close Button -->
-	<span class="close1">&times;</span>
+	<span class="close">&times;</span>
 	
 	<!-- Modal Content (The Image) -->
 	<img class="modal-content" id="img01">
 </div>
 
+
+<!--FUMBL CONTENT-->
 	<div class="column">
 		<div class="content">
-			<img id="fum" src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%"></a>
+			<img id="fum" src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%">
 			<p></p>
 		</div>
 	</div> 
-	
+<!--FUMBL ENLARGEN-->	
 <div id="myModal2" class="modal">
 	<!-- The Close Button -->
 	<span class="close2">&times;</span>
@@ -48,14 +52,16 @@
 	<!-- Modal Content (The Image) -->
 	<img class="modal-content" id="img02">
 </div>	
+
 	
+<!--HARE PACKAGE CONTENT-->
 	<div class="column">
 		<div class="content">
-			<img id="hare" src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%"></a>
+			<img id="hare" src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%">
 			<p></p>
 		</div>
 	</div>  
-	
+<!--HARE PACKAGE ENLARGEN-->	
 <div id="myModal3" class="modal">
 	<!-- The Close Button -->
 	<span class="close3">&times;</span>
@@ -64,8 +70,9 @@
 	<img class="modal-content" id="img03">
 </div>
 
-</div> <!--row-->
+</div> <!--END OF ROW DIV-->
 
+<!--ADDTIONAL INFO-->
 <div class="content">
 	<h3>Additional Info</h3>
 		<a class= "link" href="mailto:cgrant-williams@albany.edu">cgrant-williams@albany.edu</a>
@@ -75,6 +82,8 @@
 </div>
 
 <script src="mockups.js"></script>
+
+</div><!--END OF MAIN DIV-->
 
 </body>
 </html>
