--- a/website.html
+++ b/website.html
@@ -48,7 +48,7 @@
 			<p></p>
 		</div>
 	</div>
-</div>
+</div><!--row-->
 
 <div class="content">
 	<h3>Additional Info</h3>
@@ -58,5 +58,6 @@
 		<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
+</div><!--main-->
 </body>
 </html>
