added official documentation

--- a/resume.html
+++ b/resume.html
@@ -17,14 +17,14 @@
 <hr>
 
 <div class="row">
-	<div class="column"> <!--conent-->
+	<div class="column"> 
 		<div class="content">
 			<img src="resume.png" alt="resume" style="width:100%">
 			<h3>My Resume</h3>
 			<p></p>
 		</div>
 	</div>
-</div>
+</div><!--END OF ROW DIV--->
 
 <div class="content">
   <h3>Additional Info</h3>
@@ -33,6 +33,6 @@
     <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
-</div> <!--main-->
+</div> <!--END OF MAIN DIV-->
 </body>
 </html>
