--- a/website.html
+++ b/website.html
@@ -48,7 +48,8 @@
 			<p></p>
 		</div>
 	</div>
-</div><!--row-->
+	
+</div><!--END OF ROW DIV--->
 
 <div class="content">
 	<h3>Additional Info</h3>
@@ -58,6 +59,7 @@
 		<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
-</div><!--main-->
+</div><!--END OF MAIN DIV-->
+
 </body>
 </html>
