--- a/aboutme.html
+++ b/aboutme.html
@@ -17,14 +17,14 @@
 <hr>
 
 <div class="row">
-	<div class="column"> <!--conent-->
+	<div class="column">
 		<div class="content">
 			<center><img src="testing.jpg" alt="me" style="width:40%"></center>
 			<center><h3>Hello!</h3></center>
 			<p class ="b"> I'm a recent graduate of Univeristy at Albany's class of 2020. Focusing on starting a career as a front-end web developer specializing in user-experience design (IUX/UX). On this website I hope to showcase not only my web developing skills but also finished projects I have completed in my undergrad studies and free time. Killing two birds with one code, I hope to strengthen my skills in HTML, CSS, Javascript, and Python through online courses and challenges and sharing them here. You can keep up with my progress by accessing my github account, linkedin profile, as well as my twitter. Enjoy!</p>
 		</div>
 	</div>
-</div>
+</div><!--END OF ROW DIV--->
 
 <div class="content">
   <h3>Additional Info</h3>
@@ -32,6 +32,8 @@
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 	<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
+
+</div><!--END OF MAIN DIV-->
 
 </body>
 </html>
