--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 			<p></p>
 		</div>
 	</div>
-
+	
 	<div class="column">
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
@@ -39,12 +39,14 @@
 			<center><a class= "mps" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
 		</div>
 	</div>
-</div> <!--row div ending-->
+</div> <!--END OF ROW DIV--->
 
 <div class="content">
 	<h3>Additional Info</h3>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div>
+
+</div><!--END OF MAIN DIV-->
 
 </body>
 </html>
