cleaning up portfolio pages and starting resume page

--- a/mockups.html
+++ b/mockups.html
@@ -11,7 +11,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
@@ -19,6 +19,14 @@
 <hr>
 
 <div class="row">
+
+<!--PROTOTYPES-->
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="home" href="prototypes.html"><p>Prototypes </p></a></center>
+		</div>
+	</div>
 
 <!--FLIX CONTENT-->
 	<div class="column">
