--- a/prototypes.html
+++ b/prototypes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="website.css" />
+<link rel="stylesheet" type="text/css" href="mockups.css" />
 <title> Portfolio </title>
 </head>
 
@@ -19,24 +19,21 @@
 <div class="row">
 	<div class="column"> 
 		<div class="content">
-			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
-			<center><h5>Makey Makey Walkthrough</h5></center>
-			<p></p>
+			<img src="mockups/Precision by OrderlyCompany/2.png" alt="POC" style="width:100%" "height:100%">
+			<center><a class="home" href="https://invis.io/QXT6VLZACZU"><p>Precision</p></a></center>
 		</div>
 	</div>
 	
 	<div class="column">
 		<div class="content">
-			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
-			<center><h5>Canva Tutorial</h5></center>
-			<p></p>
+			<img src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN" style="width:100%" "height:100%">
+			<center><a class="home" href="https://invis.io/GMXX20X9UP8"><p>Aligned</p></a></center>
 		</div>
 	</div>
 
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
-			<center><a class= "pro" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
+		
 		</div>
 	</div>
 </div> <!--END OF ROW DIV--->
