--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="column"> 
 		<div class="content">
-			<img src="resume.png" alt="resume" style="width:100%">
+			<img src="Chyna Grant-Williams Resume 2020.pdf" alt="res20" style="width:100%">
 			<h3>My Resume</h3>
 			<p></p>
 		</div>
