--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link rel="stylesheet" type="text/css" href="website.css" />
+<meta charset="utf-8" /> 	
+	<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" type="text/css" href="resume.css" />
 <title> Resume </title>
 </head>
 
@@ -19,8 +20,8 @@
 <div class="row">
 	<div class="column"> 
 		<div class="content">
-			<img src="Chyna Grant-Williams Resume 2020.pdf" alt="res20" style="width:100%">
-			<h3>My Resume</h3>
+			<img src="resume.png" alt="resume" style="width:100%">
+			<center><a class= "resume" href="Chyna Grant-Williams Resume 2020.pdf"><h3>My Resume</h3></a></center>
 			<p></p>
 		</div>
 	</div>
