added links to each in on each page to make it easier to follow

--- a/prototypes.html
+++ b/prototypes.html
@@ -33,7 +33,8 @@
 
 	<div class="column">
 		<div class="content">
-		
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="home" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
 </div> <!--END OF ROW DIV--->
