--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,19 @@
 <hr>
 
 <div class="row">
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class= "pro" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
+		</div>
+	</div>
+	
+	<div class="column">
+		<div class="content">
+			<img src="flyer.png" alt="flyer" style="width:100%">
+			<center><a class= "pro" href="flyers.html"><h5>Online Flyers</h5></a></center>
+		</div>
+	</div>	
 	<div class="column"> 
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
@@ -33,12 +46,7 @@
 		</div>
 	</div>
 
-	<div class="column">
-		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
-			<center><a class= "pro" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
-		</div>
-	</div>
+
 </div> <!--END OF ROW DIV--->
 
 <div class="content">
