--- a/prototypes.html
+++ b/prototypes.html
@@ -17,6 +17,7 @@
 <hr>
 
 <div class="row">
+	<!-- PRECISION-->
 	<div class="column"> 
 		<div class="content">
 			<img src="mockups/Precision by OrderlyCompany/2.png" alt="POC" style="width:100%" "height:100%">
@@ -24,6 +25,7 @@
 		</div>
 	</div>
 	
+	<!--ALIGNED-->
 	<div class="column">
 		<div class="content">
 			<img src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN" style="width:100%" "height:100%">
@@ -31,6 +33,7 @@
 		</div>
 	</div>
 
+	<!--MOCKUPS DIV-->
 	<div class="column">
 		<div class="content">
 			<img src="mockup.png" alt="mockup" style="width:100%">
