--- a/mockups.html
+++ b/mockups.html
@@ -20,8 +20,22 @@
 
 <div class="row">
 
+<!--PROTOTYPES-->
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
+		</div>
+	</div>
 
-
+<!--FLYERS-->
+	<div class="column">
+		<div class ="content">
+			<img src="flyer.png" alt="flyer" style="width:100%">
+			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
+		</div>
+	</div>
+	
 <!--FLIX CONTENT-->
 	<div class="column">
 		<div class="content"> 
@@ -55,7 +69,9 @@
 	<img class="modal-content" id="img02">
 </div>	
 
-	
+</div> <!--END OF ROW DIV-->
+
+<div class = "row">
 <!--HARE PACKAGE CONTENT-->
 	<div class="column">
 		<div class="content">
@@ -72,16 +88,7 @@
 	<img class="modal-content" id="img03">
 </div>
 
-
-<!--PROTOTYPES-->
-	<div class="column">
-		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
-			<center><a class="home" href="prototypes.html"><p>Prototypes </p></a></center>
-		</div>
-	</div>
-	
-</div> <!--END OF ROW DIV-->
+</div><!--END OF ROW#2 DIV-->
 
 <!--ADDTIONAL INFO-->
 <div class="content">
