--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="website.css" />
+<link rel="stylesheet" type="text/css" href="portfolio.css" />
 <title> Portfolio </title>
 </head>
 
@@ -17,23 +17,10 @@
 <hr>
 
 <div class="row">
-	<div class="column">
-		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
-			<center><a class= "pro" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
-		</div>
-	</div>
-	
-	<div class="column">
-		<div class="content">
-			<img src="flyer.png" alt="flyer" style="width:100%">
-			<center><a class= "pro" href="flyers.html"><h5>Online Flyers</h5></a></center>
-		</div>
-	</div>	
 	<div class="column"> 
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
-			<center><h5>Makey Makey Walkthrough</h5></center>
+			<center><a class = "label"><h5>Makey Makey Walkthrough</h5></a></center>
 			<p></p>
 		</div>
 	</div>
@@ -41,16 +28,31 @@
 	<div class="column">
 		<div class="content">
 			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
-			<center><h5>Canva Tutorial</h5></center>
+			<center><a class= "label"><h5>Canva Tutorial</h5></a></center>
 			<p></p>
 		</div>
 	</div>
-
-
 </div> <!--END OF ROW DIV--->
 
+<div class="row">
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class= "label" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
+		</div>
+	</div>
+	
+	<div class="column">
+		<div class="content">
+			<img src="flyer.png" alt="flyer" style="width:100%">
+			<center><a class= "label" href="flyers.html"><h5>Online Flyers</h5></a></center>
+		</div>
+	</div>	
+</div> <!--END OF ROW DIV-->
+
+
 <div class="content">
-	<h3>Additional Info</h3>
+	<h3>Checkout My Commit History</h3>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div>
 
