--- a/prototypes.html
+++ b/prototypes.html
@@ -40,6 +40,14 @@
 			<center><a class="home" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
+	
+	<!--FLYERS-->
+	<div class="column">
+		<div class ="content">
+			<img src="flyer.png" alt="flyer" style="width:100%">
+			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
+		</div>
+	</div>
 </div> <!--END OF ROW DIV--->
 
 <div class="content">
