--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8" /> 	
@@ -25,15 +25,18 @@
 			<p></p>
 		</div>
 	</div>
-</div><!--END OF ROW DIV--->
 
-<div class="content">
-  <h3>Additional Info</h3>
-	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
-	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
-    <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
-</div>
 
-</div> <!--END OF MAIN DIV-->
+	<div class="column">
+		<div class="content">
+			<h3>Additional Info</h3>
+				<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
+				<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
+				<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
+		</div>
+	</div>
+</div><!--END OF ROW DIV
+
+</div> <!--END OF MAIN DIV
 </body>
-</html>
+</html>-->
