--- a/flyers.html
+++ b/flyers.html
@@ -17,6 +17,7 @@
 <hr>
 
 <div class="row">
+
 <!--FLYER #1-->
 	<div class="column"> 
 		<div class="content">
@@ -59,7 +60,6 @@
 			<img id="f4" src="flyers/7.png" alt="f3" width="100%" height="100%">
 		</div>
 	</div>
-	
 <!--FLYER #4 ENLARGEN-->
 <div id="myModal4" class="modal">
 	<!-- The Close Button -->
@@ -70,6 +70,26 @@
 </div>
 	
 </div> <!--END OF ROW DIV--->
+
+<div class="row">
+
+<!--MOCKUPS-->
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="label" href="mockups.html"><p>Mockups </p></a></center>
+		</div>
+	</div>
+
+<!--PROTOTYPES-->
+	<div class="column">
+		<div class="content">
+			<img src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
+		</div>
+	</div>
+
+</div>
 
 <div class="content">
 	<h3>Additional Info</h3>
