--- a/website.html
+++ b/website.html
@@ -20,7 +20,7 @@
 	<div class="column">
 		<div class="content"> 
 			<img src="testing.jpg" alt="me" style="width:100%">
-			<center><a class ="am" href="aboutme.html"><h3>About Me<h3></a></center>
+			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a></center>
 			<p></p>
 		</div>
 	</div>
@@ -28,7 +28,7 @@
 	<div class="column">
 		<div class="content">
 			<img src="resume.png" alt="resume" style="width:100%">
-			<center><a class= "mr" href="resume.html"><h3>My Resume</h3></a></center>
+			<center><a class= "label" href="Chyna Grant-Williams Resume 2020.pdf"><h3>My Resume</h3></a></center>
 			<p></p>
 		</div>
 	</div>  
@@ -36,7 +36,7 @@
 	<div class="column">
 		<div class="content">
 			<img src="harri.jpg" alt="harriet" style="width:100%">
-			<center><a class= "ht" href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><h3>Harriet Tubman 2.0</h3></a></center>
+			<center><a class= "label" href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><h3>Harriet Tubman 2.0</h3></a></center>
 			<p></p>
 		</div>
 	</div>  
@@ -44,7 +44,7 @@
 	<div class="column"> 
 		<div class="content">
 			<img src="porfolio.png" alt="porfolio" style="width:100%">
-			<center><a class= "mp" href="portfolio.html"><h3>My Portfolio</h3></a></center>
+			<center><a class= "label" href="portfolio.html"><h3>My Portfolio</h3></a></center>
 			<p></p>
 		</div>
 	</div>
