took all in-line styling out and applyied classes to be referenced in the 3 style sheets

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="aboutme.css" />
+<link rel="stylesheet" type="text/css" href="portfolio.css" />
 <title> About Me </title>
 </head>
 
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home"  href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="column">
 		<!--<div class="content">-->
-			<img src="testing.jpg" alt="me" style="width:100%">
+			<img class="profile" src="testing.jpg" alt="me">
 		<!--</div>-->
 	</div>
 	<div class="column">
