--- a/flyers.html
+++ b/flyers.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -21,7 +21,7 @@
 <!--FLYER #1-->
 	<div class="column"> 
 		<div class="content">
-			<img id="f1" src="flyers/1.png" alt="f1" width="100%" height="100%">
+			<img class="flyer" id="f1" src="flyers/1.png" alt="f1">
 		</div>
 	</div>
 <!--FLYER #1 ENLARGEN-->
@@ -33,7 +33,7 @@
 <!--FLYER #2-->	
 	<div class="column">
 		<div class="content">
-			<img id="f2" src="flyers/3.png" alt="f2" width="100%" height="100%">
+			<img class="flyer" id="f2" src="flyers/3.png" alt="f2"> 
 		</div>
 	</div>
 <!--FLYER #2 ENLARGEN-->
@@ -45,7 +45,7 @@
 <!--FLYER #3-->
 	<div class="column">
 		<div class="content">
-			<img id="f3" src="flyers/5.png" alt="f3" width="100%" height="100%">			
+			<img class="flyer" id="f3" src="flyers/5.png" alt="f3">			
 		</div>
 	</div>
 <!--FLYER #3 ENLARGEN-->
@@ -57,7 +57,7 @@
 <!--FLYER #4-->
 	<div class="column">
 		<div class="content">
-			<img id="f4" src="flyers/7.png" alt="f3" width="100%" height="100%">
+			<img class="flyer" id="f4" src="flyers/7.png" alt="f3">
 		</div>
 	</div>
 <!--FLYER #4 ENLARGEN-->
@@ -76,7 +76,7 @@
 <!--MOCKUPS-->
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
+			<img class="pro" src="mockup.png" alt="mockup">
 			<center><a class="label" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
@@ -84,7 +84,7 @@
 <!--PROTOTYPES-->
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
+			<img class="pro" src="mockup.png" alt="mockup">
 			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
 		</div>
 	</div>
