--- a/mockups.html
+++ b/mockups.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="mockups.css">
+<link rel="stylesheet" type="text/css" href="flyers.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
@@ -23,7 +23,7 @@
 <!--PROTOTYPES-->
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
+			<img class="pro" src="mockup.png" alt="mockup">
 			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 <!--FLYERS-->
 	<div class="column">
 		<div class ="content">
-			<img src="flyer.png" alt="flyer" style="width:100%">
+			<img class="pro" src="flyer.png" alt="flyer">
 			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
 		</div>
 	</div>
@@ -39,7 +39,7 @@
 <!--FLIX CONTENT-->
 	<div class="column">
 		<div class="content"> 
-			<img id="flix" src="mockups/Flixer.jpg" alt="flix" width="100%" height="100%">
+			<img class="flyer" id="flix" src="mockups/Flixer.jpg" alt="flix">
 			<p></p>
 		</div>
 	</div>
@@ -56,7 +56,7 @@
 <!--FUMBL CONTENT-->
 	<div class="column">
 		<div class="content">
-			<img id="fum" src="mockups/Fumbl.jpg" alt="fumbl" width="100%" height="100%">
+			<img class="flyer" id="fum" src="mockups/Fumbl.jpg" alt="fumbl">
 			<p></p>
 		</div>
 	</div> 
@@ -75,7 +75,7 @@
 <!--HARE PACKAGE CONTENT-->
 	<div class="column">
 		<div class="content">
-			<img id="hare" src="mockups/HarePackage.jpg" alt="Hare" width="100%" height="100%">
+			<img class="flyer" id="hare" src="mockups/HarePackage.jpg" alt="Hare">
 			<p></p>
 		</div>
 	</div>  
