--- a/website.html
+++ b/website.html
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<img src="testing.jpg" alt="me" style="width:100%">
+			<img  class="icon" src="testing.jpg" alt="me" >
 			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a></center>
 			<p></p>
 		</div>
@@ -27,7 +27,7 @@
   
 	<div class="column">
 		<div class="content">
-			<img src="resume.png" alt="resume" style="width:100%">
+			<img class="icon" src="resume.png" alt="resume">
 			<center><a class= "label" href="Chyna Grant-Williams Resume 2020.pdf"><h3>My Resume</h3></a></center>
 			<p></p>
 		</div>
@@ -35,7 +35,7 @@
 	
 	<div class="column">
 		<div class="content">
-			<img src="harri.jpg" alt="harriet" style="width:100%">
+			<img class="icon" src="harri.jpg" alt="harriet">
 			<center><a class= "label" href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html"><h3>Harriet Tubman 2.0</h3></a></center>
 			<p></p>
 		</div>
@@ -43,7 +43,7 @@
 	
 	<div class="column"> 
 		<div class="content">
-			<img src="porfolio.png" alt="porfolio" style="width:100%">
+			<img class="icon" src="porfolio.png" alt="porfolio">
 			<center><a class= "label" href="portfolio.html"><h3>My Portfolio</h3></a></center>
 			<p></p>
 		</div>
