--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="column"> 
 		<div class="content">
-			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
+			<center><embed class="yt" src="https://www.youtube.com/embed/A4dmw_t1xy8" title="Makey Makey"></center>
 			<center><a class = "label"><h5>Makey Makey Walkthrough</h5></a></center>
 			<p></p>
 		</div>
@@ -27,7 +27,7 @@
 	
 	<div class="column">
 		<div class="content">
-			<center><embed width="100%" height="210" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
+			<center><embed class="yt" src="https://www.youtube.com/embed/llGWO2u3n-E" title="Canva"></center>
 			<center><a class= "label"><h5>Canva Tutorial</h5></a></center>
 			<p></p>
 		</div>
@@ -37,14 +37,14 @@
 <div class="row">
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
+			<img class="profile" src="mockup.png" alt="mockup">
 			<center><a class= "label" href="mockups.html"><h5>Mockups & Prototypes</h5></a></center>
 		</div>
 	</div>
 	
 	<div class="column">
 		<div class="content">
-			<img src="flyer.png" alt="flyer" style="width:100%">
+			<img class="profile" src="flyer.png" alt="flyer">
 			<center><a class= "label" href="flyers.html"><h5>Online Flyers</h5></a></center>
 		</div>
 	</div>	
