--- a/prototypes.html
+++ b/prototypes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="mockups.css" />
+<link rel="stylesheet" type="text/css" href="flyers.css" />
 <title> Portfolio </title>
 </head>
 
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" style="font-size:6vw;" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -20,31 +20,31 @@
 	<!-- PRECISION-->
 	<div class="column"> 
 		<div class="content">
-			<img src="mockups/Precision by OrderlyCompany/2.png" alt="POC" style="width:100%" "height:100%">
-			<center><a class="home" href="https://invis.io/QXT6VLZACZU"><p>Precision</p></a></center>
+			<img class="pro" src="mockups/Precision by OrderlyCompany/2.png" alt="POC">
+			<center><a class="label" href="https://invis.io/QXT6VLZACZU"><p>Precision</p></a></center>
 		</div>
 	</div>
 	
 	<!--ALIGNED-->
 	<div class="column">
 		<div class="content">
-			<img src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN" style="width:100%" "height:100%">
-			<center><a class="home" href="https://invis.io/GMXX20X9UP8"><p>Aligned</p></a></center>
+			<img class="pro" src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN">
+			<center><a class="label" href="https://invis.io/GMXX20X9UP8"><p>Aligned</p></a></center>
 		</div>
 	</div>
 
 	<!--MOCKUPS DIV-->
 	<div class="column">
 		<div class="content">
-			<img src="mockup.png" alt="mockup" style="width:100%">
-			<center><a class="home" href="mockups.html"><p>Mockups </p></a></center>
+			<img class="icon" src="mockup.png" alt="mockup" style="width:100%">
+			<center><a class="label" href="mockups.html"><p>Mockups </p></a></center>
 		</div>
 	</div>
 	
 	<!--FLYERS-->
 	<div class="column">
 		<div class ="content">
-			<img src="flyer.png" alt="flyer" style="width:100%">
+			<img class="icon" src="flyer.png" alt="flyer" style="width:100%">
 			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
 		</div>
 	</div>
