modified heading and additonal info and changed div order on mockup page

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home"  href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home"  href= "website.html">ceegeedub.com</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -24,18 +24,17 @@
 	</div>
 	<div class="column">
 		<div class="content">
-			<p class ="b"> I'm a recent graduate of Univeristy at Albany's class of 2020. Focusing on starting a career as a front-end web developer specializing in user-experience design (IUX/UX). On this website I hope to showcase not only my web developing skills but also finished projects I have completed in my undergrad studies and free time. Killing two birds with one code, I hope to strengthen my skills in HTML, CSS, Javascript, and Python through online courses and challenges and sharing them here. You can keep up with my progress by accessing my github account, linkedin profile, as well as my twitter. Enjoy!</p>
+			<p class ="b"> Hi! My name is Chyna Grant-Williams, I'm a recent graduate of Univeristy at Albany's class of 2020. Focusing on starting a career as a front-end web developer specializing in user-experience design (IUX/UX). <b>On this website I hope to showcase not only my web developing skills but also finished projects I have completed in my undergrad studies and free time.</b> Killing two birds with one code, I hope to strengthen my skills in HTML, CSS, Javascript, and Python through online courses and challenges and sharing them here. You can keep up with my progress by accessing my github account, linkedin profile, as well as my twitter. Enjoy!</p>
 		</div>
 	</div>
 </div><!--END OF ROW DIV--->
 
 <div class="content">
-  <center>
-  <h3>Additional Info</h3>
-	<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
-	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
-	<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
-	</center>
+	<h3>Additional Info</h3>
+		<p>Email me at </p><a class= "link" href="mailto:cgrant-williams@albany.edu"><p>cgrant-williams@albany.edu<p></a>
+		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn</p></a>
+		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github</p></a>
+		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
 </div><!--END OF MAIN DIV-->
