--- a/mockups.html
+++ b/mockups.html
@@ -11,7 +11,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">ceegeedub.com</a></center></h1>
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
@@ -20,21 +20,22 @@
 
 <div class="row">
 
-<!--PROTOTYPES-->
+<!--HARE PACKAGE CONTENT-->
 	<div class="column">
 		<div class="content">
-			<img class="pro" src="mockup.png" alt="mockup">
-			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
+			<img class="flyer" id="hare" src="mockups/HarePackage.jpg" alt="Hare">
+			<p></p>
 		</div>
-	</div>
+	</div>  
+<!--HARE PACKAGE ENLARGEN-->	
+<div id="myModal3" class="modal">
+	<!-- The Close Button -->
+	<span class="close3">&times;</span>
+	
+	<!-- Modal Content (The Image) -->
+	<img class="modal-content" id="img03">
+</div>
 
-<!--FLYERS-->
-	<div class="column">
-		<div class ="content">
-			<img class="pro" src="flyer.png" alt="flyer">
-			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
-		</div>
-	</div>
 	
 <!--FLIX CONTENT-->
 	<div class="column">
@@ -68,36 +69,34 @@
 	<!-- Modal Content (The Image) -->
 	<img class="modal-content" id="img02">
 </div>	
-
 </div> <!--END OF ROW DIV-->
 
 <div class = "row">
-<!--HARE PACKAGE CONTENT-->
+
+<!--PROTOTYPES-->
 	<div class="column">
 		<div class="content">
-			<img class="flyer" id="hare" src="mockups/HarePackage.jpg" alt="Hare">
-			<p></p>
+			<img class="pro" src="mockup.png" alt="mockup">
+			<center><a class="label" href="prototypes.html"><p>Prototypes </p></a></center>
 		</div>
-	</div>  
-<!--HARE PACKAGE ENLARGEN-->	
-<div id="myModal3" class="modal">
-	<!-- The Close Button -->
-	<span class="close3">&times;</span>
-	
-	<!-- Modal Content (The Image) -->
-	<img class="modal-content" id="img03">
-</div>
-
+	</div>
+<!--FLYERS-->
+	<div class="column">
+		<div class ="content">
+			<img class="pro" src="flyer.png" alt="flyer">
+			<center><a class="label" href="flyers.html"><p>Online Flyers</p></a></center>
+		</div>
+	</div>
 </div><!--END OF ROW#2 DIV-->
 
-<!--ADDTIONAL INFO-->
+<!--ADDTIONAL 
 <div class="content">
 	<h3>Additional Info</h3>
 		<a class= "link" href="mailto:cgrant-williams@albany.edu">cgrant-williams@albany.edu</a>
 		<a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn Profile</p></a>
 		<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 		<a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
-</div>
+</div>-->
 
 <script src="mockups.js"></script>
 
