--- a/prototypes.html
+++ b/prototypes.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-<h1><center><a class="home" href= "website.html">Chyna Grant-Williams</a></center></h1>
+<h1><center><a class="home" href= "website.html">ceegeedub.com</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
@@ -50,10 +50,10 @@
 	</div>
 </div> <!--END OF ROW DIV--->
 
-<div class="content">
+<!--div class="content">
 	<h3>Additional Info</h3>
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
-</div>
+</div-->
 
 </div><!--END OF MAIN DIV-->
 
