added menu html and css

--- a/website.html
+++ b/website.html
@@ -6,6 +6,28 @@
 </head>
 <body>
 
+<div class="menu-container">
+<input type="checkbox" id="openmenu" class="hamburger-checkbox">
+	<div class="hamburger-icon">
+	<label for="openmenu" id="hamburger-label">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</label>
+	</div>
+	<div class="menu-pane">
+	<nav>
+		<ul class="menu-links">
+			<li><a href="website.html">Home</a><span id="web-links"></span></li>
+			<li><a href="aboutme.html">About Me</a></li>
+			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume</a></li>
+			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
+			<li><a href="portfolio.html"> Portfolio</a></li>
+		</ul>
+	</nav>
+	</div>
+
 <!-- MAIN (Center website) -->
 <div class="main">
 
@@ -59,6 +81,7 @@
 		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
 </div>
 
+</div><!--END OF MENU DIV-->
 </div><!--END OF MAIN DIV-->
 
 </body>
