--- a/prototypes.html
+++ b/prototypes.html
@@ -8,6 +8,28 @@
 
 <body>
 
+<div class="menu-container">
+<input type="checkbox" id="openmenu" class="hamburger-checkbox">
+	<div class="hamburger-icon">
+	<label for="openmenu" id="hamburger-label">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</label>
+	</div>
+	<div class="menu-pane">
+	<nav>
+		<ul class="menu-links">
+			<li><a href="website.html">Home</a><span id="web-links"></span></li>
+			<li><a href="aboutme.html">About Me</a></li>
+			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume</a></li>
+			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
+			<li><a href="portfolio.html"> Portfolio</a></li>
+		</ul>
+	</nav>
+	</div>
+
 <div class="main">
 
 <h1><center><a class="home" href= "website.html">ceegeedub.com</a></center></h1>
@@ -55,6 +77,7 @@
 	<a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github Account</p></a>
 </div-->
 
+</div><!--END OF MENU DIV-->
 </div><!--END OF MAIN DIV-->
 
 </body>
