--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="portfolio.css" />
+<link rel="stylesheet" type="text/css" href="stylesheet2.css" />
 <title> Portfolio </title>
 </head>
 
