--- a/prototypes.html
+++ b/prototypes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="flyers.css" />
+<link rel="stylesheet" type="text/css" href="stylesheet3.css" />
 <title> Portfolio </title>
 </head>
 
