renamed file referenced to homepage

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
 	<div class="menu-pane">
 	<nav>
 		<ul class="menu-links">
-			<li><a href="website.html">Home</a><span id="web-links"></span></li>
+			<li><a href="index.html">Home</a><span id="web-links"></span></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="Chyna Grant-Williams Resume 2020.pdf">Resume(pdf file)</a></li>
 			<li><a href="https://chynasamone.github.io/HarrietTubman2.0/1FINAL-PROJECT1.html">Harriet Tubman 2.0</a></li>
@@ -32,7 +32,7 @@
 
 <div class="main">
 
-<h1><center><a class="home"  href= "website.html">ceegeedub.com</a></center></h1>
+<h1><center><a class="home"  href= "index.html">ceegeedub.com</a></center></h1>
 <hr>
 
 <span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
