updating about me picture and email in header

--- a/mockups.html
+++ b/mockups.html
@@ -37,7 +37,7 @@
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
-<span class="right">850-459-4283</span>
+<span class="right">ChynaGrantWllms@gmail.com</span>
 <hr>
 
 <div class="row">
