--- a/aboutme.html
+++ b/aboutme.html
@@ -35,13 +35,13 @@
 <h1><center><a class="home"  href= "index.html">ceegeedub.com</a></center></h1>
 <hr>
 
-<span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
+<span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY 11221</span>​
 <hr>
 
 <div class="row">
 	<div class="column">
 		<!--<div class="content">-->
-			<img class="profile" src="testing.jpg" alt="me">
+			<img class="profile" src="linkinprofile.jpg" alt="me">
 		<!--</div>-->
 	</div>
 	<div class="column">
