--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 <hr>
 
 <span class="left">Brooklyn, NY 11221</span>​
-<span class="right">850-459-4283</span>
+<span class="right">ChynaGrantWllms@gmail.com</span>
 <hr>
 
 <div class="row">
 	<div class="column">
 		<div class="content"> 
-			<img  class="icon" src="testing.jpg" alt="me" >
+			<img  class="icon" src="linkinprofile.jpg" alt="me" >
 			<center><a class ="label" href="aboutme.html"><h3>About Me<h3></a></center>
 			<p></p>
 		</div>
