--- a/prototypes.html
+++ b/prototypes.html
@@ -35,7 +35,7 @@
 <h1><center><a class="home" href= "index.html">ceegeedub.com</a></center></h1>
 <hr>
 
-<span class="right">850-459-4283</span><span class="left">Brooklyn, NY 11221</span>​
+<span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY 11221</span>​
 <hr>
 
 <div class="row">
