updated email mail to link

--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
 
 <div class="content">
 	<h3>Additional Info</h3>
-		<p>Email me at </p><a class= "link" href="mailto:cgrant-williams@albany.edu"><p>cgrant-williams@albany.edu<p></a>
+		<p>Email me at </p><a class= "link" href="mailto:ChynaGrantWllms@gmail.com"><p>cgrant-williams@albany.edu<p></a>
 		<p>Hire me at </p><a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/"><p>LinkedIn</p></a>
 		<p>Check out my progress on </p><a class= "link" href="https://github.com/ChynaGrant-Williams"><p>Github</p></a>
 		<p>Follow me on <a class= "link" href="https://twitter.com/china_witha_y"><p>Twitter</p></a>
