updated about me bio

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,13 @@
 	</div>
 	<div class="column">
 		<div class="content">
-			<p class ="b"> Hi! My name is Chyna Grant-Williams, I'm a recent graduate of Univeristy at Albany's class of 2020. Focusing on starting a career as a front-end web developer specializing in user-experience design (IUX/UX). <b>On this website I hope to showcase not only my web developing skills but also finished projects I have completed in my undergrad studies and free time.</b> Killing two birds with one code, I hope to strengthen my skills in HTML, CSS, Javascript, and Python through online courses and challenges and sharing them here. You can keep up with my progress by accessing my github account, linkedin profile, as well as my twitter. Enjoy!</p>
+			<p class ="b"> Hi! My name is Chyna Grant-Williams and I'm a Spring 2020 graduate of The University at Albany, New York, having earned a <b>B.A. in Informatics with a concentration in IUX.</b></p>
+
+			<p class="b">Currently based in New York City and working to establish a career as a <b>front-end web developer, specializing in user-experience design (IUX/UX),</b> this website showcases not only my web developing skills but also finished projects I have completed during my undergrad studies and free time.</p>
+			
+			<p class="b"><b>Killing two birds with one code,</b> I'm honing my HTML, CSS, Javascript, and Python skills through online courses and challenges and sharing them here.</p>
+			
+			<p class="b">You can keep up with my progress by accessing my <a class= "link" href="https://github.com/ChynaGrant-Williams">Github </a>account, <a class= "link" href="https://www.linkedin.com/in/chyna-grant-williams-a44734129/">Linkedin </a>profile, as well as my <a class= "link" href="https://twitter.com/china_witha_y">Twitter</a>. Enjoy!</p>
 		</div>
 	</div>
 </div><!--END OF ROW DIV--->
