--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <h1><center><a class="title">ceegeedub.com</a></center></h1>
 <hr>
 
-<span class="left">Brooklyn, NY 11221</span>​
-<span class="right">ChynaGrantWllms@gmail.com</span>
+
+<span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
 
 <div class="row">
