--- a/mockups.html
+++ b/mockups.html
@@ -36,8 +36,7 @@
 <h1><center><a class="home" href= "index.html">ceegeedub.com</a></center></h1>
 <hr>
 
-<span class="left">Brooklyn, NY 11221</span>​
-<span class="right">ChynaGrantWllms@gmail.com</span>
+<span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
 <hr>
 
 <div class="row">
