capitalized CGD in ceegeedub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1><center><a class="title">ceegeedub.com</a></center></h1>
+<h1><center><a class="title">CeeGeeDub.com</a></center></h1>
 <hr>
 
 
