--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
 
 <div class="main">
 
-<h1><center><a class="home"  href= "index.html">ceegeedub.com</a></center></h1>
+<h1><center><a class="home"  href= "index.html">CeeGeeDub.com</a></center></h1>
 <hr>
 
 <span class="right">ChynaGrantWllms@gmail.com</span><span class="left">Brooklyn, NY</span>​
