added captions for each mockup

--- a/mockups.html
+++ b/mockups.html
@@ -45,7 +45,7 @@
 	<div class="column">
 		<div class="content">
 			<img class="flyer" id="hare" src="mockups/HarePackage.jpg" alt="Hare">
-			<p></p>
+			<center><p class="b">A mockup design of a desktop display of an e-commerece business.</p></center>
 		</div>
 	</div>  
 <!--HARE PACKAGE ENLARGEN-->	
@@ -62,7 +62,7 @@
 	<div class="column">
 		<div class="content"> 
 			<img class="flyer" id="flix" src="mockups/Flixer.jpg" alt="flix">
-			<p></p>
+			<center><p class ="b">A mockup design of a tablet display of netflix-like streaming platflorm.</p></center>
 		</div>
 	</div>
 <!--FLIX ENLARGEN-->	
@@ -79,7 +79,7 @@
 	<div class="column">
 		<div class="content">
 			<img class="flyer" id="fum" src="mockups/Fumbl.jpg" alt="fumbl">
-			<p></p>
+			<center><p class="b">A mockup design of a mobile display of a social media platform.</p></center>
 		</div>
 	</div> 
 <!--FUMBL ENLARGEN-->	
