made images of prototypes clickable links

--- a/prototypes.html
+++ b/prototypes.html
@@ -42,16 +42,18 @@
 	<!-- PRECISION-->
 	<div class="column"> 
 		<div class="content">
-			<img class="pro" src="mockups/Precision by OrderlyCompany/2.png" alt="POC">
-			<center><a class="label" href="https://invis.io/QXT6VLZACZU"><p>Precision</p></a></center>
+		<a href="https://invis.io/QXT6VLZACZU">
+			<img class="pro" href="https://invis.io/QXT6VLZACZU" src="mockups/Precision by OrderlyCompany/2.png" alt="POC"></a>
+			<center><p class="b">(Click on Image to Expierence Precision)</p></center>
 		</div>
 	</div>
 	
 	<!--ALIGNED-->
 	<div class="column">
 		<div class="content">
-			<img class="pro" src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN">
-			<center><a class="label" href="https://invis.io/GMXX20X9UP8"><p>Aligned</p></a></center>
+			<a href="https://invis.io/GMXX20X9UP8">
+			<img class="pro" src="mockups/Alligned- Chyna's Midterm Assignment/1.png" alt="ALN"></a>
+			<center><p class="b">(Click on Image to Expierence Aligned)</p></center>
 		</div>
 	</div>
 
